# Robot_Vacuum_Litter

./: .gitignore  DASHBOARD_README.md  INTEGRATION_SUMMARY.md  LICENSE  LIVE_MONITOR_GUIDE.md  QUICK_START.md  README.md  STATE_MACHINE_IMPLEMENTATION.md  TESTING.md  annotate_zones.py  calibrate_zone.py  calibrate_zones.py  capture_training_frames.py  com.doga.cat-litter-dashboard.plist  com.doga.cat-litter-monitor.plist  dashboard.py  detect_qwen_v2.py  detect_qwen_v2_direct.py  detect_qwen_v2_final.py  detect_qwen_v2_fixed.py  detect_qwen_v2_manual.py  detect_qwen_v2_simple.py  draw_final.py  draw_zones.py  export_coreml_v2.py  install_service.sh  live_demo.py  live_monitor.py  precise_annotate.py  pyproject.toml  retrain_v2.py  split_data.py  test_and_export.py  test_inference.py  test_inference_v2.py  test_litter_box_detection.py  train_yolo.py  verify_annotations.py
config/: settings.yaml.example
runs/litter_box_detect/: args.yaml  results.csv
runs/litter_box_v2/: args.yaml  results.csv
scripts/: get_model.py
src/: __init__.py  config.py  main.py
src/camera/: __init__.py  ffmpeg_rtsp_client.py  rtsp_client.py
src/dashboard/: __init__.py  server.py
src/dashboard/templates/: index.html
src/detection/: __init__.py  coreml_detector.py  litter_box_detector.py  zone_manager.py
src/events/: __init__.py  logger.py
src/robot/: __init__.py  interface.py  shark.py
src/state/: __init__.py  fsm.py
training_data/: classes.txt  dataset.yaml
training_data/train/: labels.cache
training_data/val/: labels.cache
training_data/val/labels/: frame_0054.txt
